# AI-Newton

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  rust-toolchain.toml
.github/workflows/: python-basic-test.yml  python-experiment-test.yml  python-full-test.yml
aiphy/: __init__.py  core.pyi  dataplot.py  debugger.py  diffalgservice.py  general_model.py  interface.py  main.py  manager.py  memory.py  object_model.py  parsing.py  pca.py  regression.py  specific_model.py  symbolic.py  test_human_operating-benchmark.ipynb  ucb.py
aiphy/diffalg/: __init__.py  diffalg.py  mapleIO.py
aiphy/experiment/: __init__.py  core.py
aiphy/recommendation_engine/: concept_group.py  update_concept_group_policy.py
data/: init_general_model.json  init_knowledge.txt  init_memory.json  init_specific_model.json
src/: expr.lalrpop  impl_for_pyo3.rs  knowledge.rs  lib.rs  macros.rs  main.rs  regression.rs  serialize.rs  sympy.lalrpop
src/expdata/: constdata.rs  conversions.rs  expdata.rs  mod.rs  normaldata.rs  zerodata.rs
src/experiments/: expstructure.rs  mod.rs  topy.rs
src/language/: ast.rs  ast_arith.rs  complexity.rs  mod.rs
src/parser/: display.rs  mod.rs  parsing.rs
src/semantic/: evaluation.rs  exprcharacter.rs  generalize.rs  specialize.rs
test/: unit_tests.ipynb
test/examples/: test_example_1.py
test/test_basic/: __init__.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  test_cq_calculator.py  test_diff_by_zero.py  test_geoinfo_cache.py  test_partial.ipynb  test_pca.ipynb  test_pyi.py
(+174 files in other folders)
